[package]
name = "jrsonnet-pack"
description = "Pack a jsonnet entry point and its transitive imports into a self-contained bundle"
keywords = ["jsonnet", "pack", "bundler"]
categories = ["development-tools"]
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
jrsonnet-evaluator.workspace = true
jrsonnet-ir.workspace = true
jrsonnet-ir-parser.workspace = true
jrsonnet-rowan-parser.workspace = true
jrsonnet-lexer.workspace = true

serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
base64.workspace = true
