[package]
name = "jrsonnet-peg-parser"
description = "Legacy peg-based parser for jrsonnet"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
jrsonnet-gcmodule.workspace = true
jrsonnet-ir.workspace = true
peg.workspace = true

[lints]
workspace = true

[dev-dependencies]
insta.workspace = true

[features]
default = []
exp-destruct = ["jrsonnet-ir/exp-destruct"]
exp-null-coaelse = ["jrsonnet-ir/exp-null-coaelse"]
